# CPNBI

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TESTING.md  cpnbi.c  cpnbi.h  demo.c  test.c
tests/: test_decoder.c  test_pipe_io.c  test_pipe_io_win.c  test_process_event.c  test_pty_io.c  test_signal_handling.c  test_termios_lifecycle.c
